@@ -35,6 +35,7 @@
 * Fix - Check order currency on pay for order page to display supported payment methods.
 * Update - Migrate payment request settings data to express checkout settings data.
 * Update - Make the new Stripe Express Checkout Element enabled by default in all accounts.
+* Fix - Duplicate emails when enabling the gateway.
 
 = 9.0.0 - 2024-12-12 =
 * Fix - Fix 404 that happens when using ECE and 3D Secure auth is triggered.
